# BrigeLatamTakeHome

./: README.md
dashboard-ui/: README.md  nuxt.config.ts  package-lock.json  package.json
dashboard-ui/components/: CompanyScoreWidget.vue
dashboard-ui/pages/: index.vue
dashboard-ui/server/api/: score.post.ts
score-api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
score-api/score_service/: config.py  main.py  models.py  scoring.py
score-api/tests/: conftest.py  test_health.py  test_score.py
